@@ -25,6 +25,9 @@ Library
   DOCSIS SEC BPI, AES-CCM and AES-CMAC.
 - AES256-DOCSIS algorithm added.
 - ZUC-EEA3 and ZUC-EIA3 Multi-buffer implemented for AVX2 and AVX512.
+- ZUC-EEA3 and ZUC-EIA3 Multi-buffer implemented for AVX2 and AVX512,
+  using this latter GFNI and VAES instructions where these are present
+  in the CPU.
 - Minimum required version for NASM is now 2.14.
 
 LibTestApp
